--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -55,20 +55,56 @@
                     <img src="images/icon-x-silver.svg" class="current-turn__icon" alt="turn-icon">
                     <p class="text-color-silver font-size-200 uppercase">Turn</p>
                 </div>
-                <button class="restart-button btn background-silver">
+                <button class="restart-button btn background-silver border-radius">
                     <img src="images/icon-restart.svg" alt="restart-icon">
                 </button>
             </header>
             <div class="game__wrapper grid grid-3-columns">
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
-                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius"></button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
+                <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
+                    <span class="hover-icon-wrapper">
+                        <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
+                    </span>
+                </button>
             </div>
         </div>
     </section>
