--- a/01-qr_code_component/index.html
+++ b/01-qr_code_component/index.html
@@ -13,18 +13,21 @@
 </head>
 
 <body>
-    <div class="icons">
-        <ion-icon class="light-mode-icon" name="sunny-outline"></ion-icon>
-        <ion-icon class="dark-mode-icon" name="moon-outline"></ion-icon>
-    </div>
+<div class="icons">
+    <ion-icon class="light-mode-icon" name="sunny-outline"></ion-icon>
+    <ion-icon class="dark-mode-icon" name="moon-outline"></ion-icon>
+</div>
 
+<main>
     <div class="container">
-        <img src="images/image-qr-code.png" alt="" class="image">
-        <div class="text">
+        <img src="images/image-qr-code.png" alt="QR Image" class="image">
+        <div class="text-content">
             <h3 class="heading">Improve your front-end skills by building projects</h3>
             <p class="para">Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
+</main>
+
 <script src="javascript/script.js"></script>
 </body>
 
