--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -59,6 +59,7 @@
                     <img src="images/icon-restart.svg" alt="restart-icon">
                 </button>
             </header>
+
             <div class="game__wrapper grid grid-3-columns">
                 <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
                     <span class="hover-icon-wrapper">
@@ -106,6 +107,10 @@
                     </span>
                 </button>
             </div>
+        </div>
+
+        <div class="score-wrapper">
+
         </div>
     </section>
 </main>
