--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -107,11 +107,23 @@
                     </span>
                 </button>
             </div>
+
+            <div class="score-wrapper text-color-dark-navy text-align-center flex flex-gap flex-justify-space-between">
+                <div class="x-score-box score-box background-light-blue border-radius">
+                    <p class="uppercase font-size-100 font-weight-bold">X<span class="x-user">(You)</span></p>
+                    <p class="x-score font-weight-bold font-size-400">0</p>
+                </div>
+                <div class="ties-score-box score-box background-silver border-radius">
+                    <p class="uppercase font-size-100 font-weight-bold ties__text">Ties</p>
+                    <p class="ties-score font-weight-bold font-size-400">0</p>
+                </div>
+                <div class="o-score-box score-box background-light-yellow border-radius">
+                    <p class="uppercase font-size-100 font-weight-bold">O<span class="o-user">(CPU)</span></p>
+                    <p class="o-score font-weight-bold font-size-400">0</p>
+                </div>
+            </div>
         </div>
 
-        <div class="score-wrapper">
-
-        </div>
     </section>
 </main>
 
