--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -114,7 +114,7 @@
                     <p class="x-score font-weight-bold font-size-400">0</p>
                 </div>
                 <div class="ties-score-box score-box background-silver border-radius">
-                    <p class="uppercase font-size-100 font-weight-bold ties__text">Ties</p>
+                    <p class="uppercase font-size-100 font-weight-bold">Ties</p>
                     <p class="ties-score font-weight-bold font-size-400">0</p>
                 </div>
                 <div class="o-score-box score-box background-light-yellow border-radius">
@@ -127,11 +127,21 @@
     </section>
 </main>
 
-<section class="game-finished-section">
-    <div class="container">
-        <p class="result text-color-silver">You Winnnnn</p>
+<section class="game-finished-section background-semi-dark-navy">
+    <div class="container flow grid grid-place-center">
+        <p class="result text-color-silver">Player <span class="player">Wins</span></p>
+        <div class="flex flex-gap">
+            <img src="images/icon-o.svg" alt="icon o">
+            <p class="font-size-500 text-color-light-yellow uppercase">Takes the round</p>
+        </div>
+        <div class="buttons-wrapper">
+            <button class="quit-button btn uppercase background-silver text-color-dark-navy">Quit</button>
+            <button class="next-round-button btn uppercase background-light-yellow text-color-dark-navy">Next Round</button>
+        </div>
     </div>
 </section>
+
+<div class="overlay hidden"></div>
 <script src="javascript/script.js"></script>
 </body>
 </html>
