--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -60,7 +60,7 @@
                 </button>
             </header>
 
-            <div class="game__wrapper grid grid-3-columns">
+            <div class="game__wrapper grid grid-3-columns grid-gap">
                 <button class="choice-button grid grid-place-center background-semi-dark-navy border-radius">
                     <span class="hover-icon-wrapper">
                         <img src="images/icon-o-outline.svg" alt="hover-icon" class="hover-icon">
@@ -110,7 +110,7 @@
 
             <div class="score-wrapper text-color-dark-navy text-align-center flex flex-gap flex-justify-space-between">
                 <div class="x-score-box score-box background-light-blue border-radius">
-                    <p class="uppercase font-size-100 font-weight-bold">X<span class="x-user">(You)</span></p>
+                    <p class="uppercase font-size-100 font-weight-bold">X<span class="x-user">(CPU)</span></p>
                     <p class="x-score font-weight-bold font-size-400">0</p>
                 </div>
                 <div class="ties-score-box score-box background-silver border-radius">
@@ -118,7 +118,7 @@
                     <p class="ties-score font-weight-bold font-size-400">0</p>
                 </div>
                 <div class="o-score-box score-box background-light-yellow border-radius">
-                    <p class="uppercase font-size-100 font-weight-bold">O<span class="o-user">(CPU)</span></p>
+                    <p class="uppercase font-size-100 font-weight-bold">O<span class="o-user">(You)</span></p>
                     <p class="o-score font-weight-bold font-size-400">0</p>
                 </div>
             </div>
