--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -124,6 +124,9 @@
             </div>
         </div>
 
+        <div class="opponent-thinking-text-wrapper">
+            <p class="font-size-100 text-color-silver uppercase text-align-center">Your opponent is thinking ...</p>
+        </div>
     </section>
 </main>
 
@@ -136,10 +139,12 @@
         </div>
         <div class="buttons-wrapper">
             <button class="quit-button btn uppercase background-silver text-color-dark-navy">Quit</button>
-            <button class="next-round-button btn uppercase background-light-yellow text-color-dark-navy">Next Round</button>
+            <button class="next-round-button btn uppercase background-light-yellow text-color-dark-navy">Next Round
+            </button>
         </div>
     </div>
 </section>
+
 
 <div class="overlay hidden"></div>
 <script src="javascript/script.js"></script>
