Game overlay added

--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -122,6 +122,8 @@
                     <p class="o-score font-weight-bold font-size-400">0</p>
                 </div>
             </div>
+
+            <div class="game-overlay hidden"></div>
         </div>
 
         <div class="opponent-thinking-text-wrapper">
@@ -144,6 +146,8 @@
         </div>
     </div>
 </section>
+
+
 
 
 <div class="overlay hidden"></div>
