Game overlay added

--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -134,10 +134,10 @@
 
 <section class="game-finished-section background-semi-dark-navy">
     <div class="container flow grid grid-place-center">
-        <p class="result text-color-silver">Player <span class="player">Wins</span></p>
-        <div class="flex flex-gap">
-            <img src="images/icon-o.svg" alt="icon o">
-            <p class="font-size-500 text-color-light-yellow uppercase">Takes the round</p>
+        <p class="result text-color-silver">You Win</p>
+        <div class="flex flex-gap flex-align-center">
+            <img src="images/icon-o.svg" alt="icon" class="result-icon">
+            <p class="game-finished__round-text font-size-500 text-color-light-yellow uppercase">Takes the round</p>
         </div>
         <div class="buttons-wrapper">
             <button class="quit-button btn uppercase background-silver text-color-dark-navy">Quit</button>
