result screen logic

--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -52,7 +52,7 @@
                     <img src="images/logo.svg" alt="logo">
                 </div>
                 <div class="current-turn-wrapper background-semi-dark-navy border-radius flex flex-align-center flex-justify-center flex-gap">
-                    <img src="images/icon-x-silver.svg" class="current-turn__icon" alt="turn-icon">
+                    <img src="images/icon-o-silver.svg" class="current-turn__icon" alt="turn-icon">
                     <p class="text-color-silver font-size-200 uppercase">Turn</p>
                 </div>
                 <button class="restart-button btn background-silver border-radius">
@@ -134,14 +134,14 @@
 
 <section class="game-finished-section background-semi-dark-navy">
     <div class="container flow grid grid-place-center">
-        <p class="result text-color-silver">You Win</p>
+        <p class="result text-color-silver font-size-200">You Win</p>
         <div class="flex flex-gap flex-align-center">
             <img src="images/icon-o.svg" alt="icon" class="result-icon">
             <p class="game-finished__round-text font-size-500 text-color-light-yellow uppercase">Takes the round</p>
         </div>
-        <div class="buttons-wrapper">
-            <button class="quit-button btn uppercase background-silver text-color-dark-navy">Quit</button>
-            <button class="next-round-button btn uppercase background-light-yellow text-color-dark-navy">Next Round
+        <div class="buttons-wrapper flex flex-gap">
+            <button class="quit-button btn uppercase background-silver text-color-dark-navy border-radius">Quit</button>
+            <button class="next-round-button btn uppercase background-light-yellow text-color-dark-navy border-radius">Next Round
             </button>
         </div>
     </div>
