--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -133,7 +133,7 @@
 </main>
 
 <section class="game-finished-section background-semi-dark-navy">
-    <div class="container grid-gap grid grid-place-center text-align-center">
+    <div class="container game-container grid-gap grid grid-place-center text-align-center">
         <div class="result-wrapper flow">
             <p class="result text-color-silver font-size-200 uppercase">You Won !</p>
             <div class="win-lose-result flex flex-gap flex-align-center">
