--- a/12-rock_paper_scissors/index.html
+++ b/12-rock_paper_scissors/index.html
@@ -91,6 +91,7 @@
                 <p class="pick-text">User Pick</p>
                 <figure class="logo-container user-pick-container">
                     <img src="images/icon-paper.svg" alt="user pick image" class="user-pick-image">
+                    <div class="win-background"></div>
                 </figure>
             </div>
             <div class="result-box">
@@ -101,6 +102,7 @@
                 <p class="pick-text">The House Picked</p>
                 <figure class="logo-container computer-pick-container">
                     <img src="images/icon-rock.svg" alt="computer pick image" class="computer-pick-image">
+                    <div class="win-background"></div>
                 </figure>
             </div>
         </div>
