--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -132,6 +132,12 @@
     </section>
 </main>
 
+<section class="restart-section">
+<div class="container">
+
+</div>
+</section>
+
 <section class="game-finished-section background-semi-dark-navy">
     <div class="container game-container grid-gap grid grid-place-center text-align-center">
         <div class="result-wrapper flow">
@@ -159,8 +165,11 @@
 </section>
 
 
+
+
 <div class="overlay hidden"></div>
 <script src="javascript/script.js"></script>
+
 </body>
 </html>
 
