--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -132,10 +132,14 @@
     </section>
 </main>
 
-<section class="restart-section">
-<div class="container">
-
-</div>
+<section class="restart-section background-semi-dark-navy">
+    <div class="container result-container grid grid-gap grid-place-center">
+        <p class="text-align-center font-weight-bold font-size-500 text-color-silver uppercase">Restart Game?</p>
+        <div class="buttons-wrapper flex flex-gap">
+            <button class="cancel-button btn font-size-200 uppercase background-silver text-color-dark-navy border-radius">No, Cancel</button>
+            <button class="agree-restart btn font-size-200 uppercase background-light-yellow text-color-dark-navy border-radius">Yes, Restart</button>
+        </div>
+    </div>
 </section>
 
 <section class="game-finished-section background-semi-dark-navy">
@@ -163,8 +167,6 @@
         </div>
     </div>
 </section>
-
-
 
 
 <div class="overlay hidden"></div>
