--- a/17-tic_tac_toe_game/index.html
+++ b/17-tic_tac_toe_game/index.html
@@ -18,7 +18,7 @@
     <section class="choice-selection-section">
         <div class="container choice-container flow border-radius">
             <div class="choice__logo-container">
-                <img src="images/logo.svg" alt="Logo" class="margin-auto">
+                <a href="#" class="logo-link"><img src="images/logo.svg" alt="Logo" class="margin-auto"></a>
             </div>
 
             <div class="mark-selection-wrapper background-semi-dark-navy flow text-align-center border-radius">
@@ -49,7 +49,7 @@
         <div class="container game-container flow">
             <header class="game__header flex flex-justify-space-between flex-align-center">
                 <div class="game__logo-container">
-                    <img src="images/logo.svg" alt="logo">
+                    <a href="#" class="logo-link"><img src="images/logo.svg" alt="Logo"></a>
                 </div>
                 <div class="current-turn-wrapper background-semi-dark-navy border-radius flex flex-align-center flex-justify-center flex-gap">
                     <img src="images/icon-o-silver.svg" class="current-turn__icon" alt="turn-icon">
@@ -136,14 +136,14 @@
     <div class="container result-container grid grid-gap grid-place-center">
         <p class="text-align-center font-weight-bold font-size-500 text-color-silver uppercase">Restart Game?</p>
         <div class="buttons-wrapper flex flex-gap">
-            <button class="cancel-button btn font-size-200 uppercase background-silver text-color-dark-navy border-radius">No, Cancel</button>
-            <button class="agree-restart btn font-size-200 uppercase background-light-yellow text-color-dark-navy border-radius">Yes, Restart</button>
+            <button class="cancel-button font-weight-bold btn font-size-200 uppercase background-silver text-color-dark-navy border-radius">No, Cancel</button>
+            <button class="agree-restart font-weight-bold btn font-size-200 uppercase background-light-yellow text-color-dark-navy border-radius">Yes, Restart</button>
         </div>
     </div>
 </section>
 
 <section class="game-finished-section background-semi-dark-navy">
-    <div class="container game-container grid-gap grid grid-place-center text-align-center">
+    <div class="container game-container flow grid grid-place-center text-align-center">
         <div class="result-wrapper flow">
             <p class="result text-color-silver font-size-200 uppercase">You Won !</p>
             <div class="win-lose-result flex flex-gap flex-align-center">
@@ -158,10 +158,10 @@
         </div>
 
         <div class="buttons-wrapper flex flex-gap">
-            <button class="quit-button btn font-size-200 uppercase background-silver text-color-dark-navy border-radius">
+            <button class="quit-button font-weight-bold btn font-size-200 uppercase background-silver text-color-dark-navy border-radius">
                 Quit
             </button>
-            <button class="next-round-button btn font-size-200 uppercase background-light-yellow text-color-dark-navy border-radius">
+            <button class="next-round-button font-weight-bold btn font-size-200 uppercase background-light-yellow text-color-dark-navy border-radius">
                 Next Round
             </button>
         </div>
