--- a/18_order-summary-component/index.html
+++ b/18_order-summary-component/index.html
@@ -15,9 +15,12 @@
 
 <main>
   <section class="order-component-section">
-    <div class="container order-component background-">
+    <div class="container order-component background">
       <div class="order-component__image-container">
         <img src="images/illustration-hero.svg" alt="Person with headphone">
+      </div>
+      <div class="order-component__text-content">
+
       </div>
 
 
