--- a/18_order-summary-component/index.html
+++ b/18_order-summary-component/index.html
@@ -15,7 +15,7 @@
 
 <main>
   <section class="order-component-section">
-    <div class="container card">
+    <div class="card container">
       <div class="card__image-container">
         <img src="images/illustration-hero.svg" class="card__image" alt="Person with headphone">
       </div>
@@ -30,8 +30,12 @@
             <h2 class="card__plan-heading">Annual Plan</h2>
             <p class="card__plan-price">$59.99/year</p>
           </div>
-          <button></button>
+          <a href="#" class="card__plan-btn">
+            Change
+          </a>
         </div>
+        <button class="card__payment-btn">Proceed to Payment</button>
+        <button class="card__cancel-btn">Cancel Order</button>
 
       </div>
 
@@ -48,8 +52,8 @@
 
 <!--  Change-->
 
-<!--  Proceed to Payment-->
-<!--  Cancel Order-->
+<!--  -->
+<!--  -->
 
 </body>
 </html>
