--- a/18_order-summary-component/index.html
+++ b/18_order-summary-component/index.html
@@ -1,59 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
-  <title>Frontend Mentor | Order summary card</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Frontend Mentor | Order summary card</title>
 
 </head>
 <body>
 
 <main>
-  <section class="order-component-section">
-    <div class="card container">
-      <div class="card__image-container">
-        <img src="images/illustration-hero.svg" class="card__image" alt="Person with headphone">
-      </div>
-      <div class="card__text-content">
-        <h1 class="card__heading">Order Summary</h1>
-        <p class="card__text">
-          You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
-        </p>
-        <div class="card__plan">
-          <img src="images/icon-music.svg" class="card__plan-image" alt="music icon">
-          <div class="card__plan-text">
-            <h2 class="card__plan-heading">Annual Plan</h2>
-            <p class="card__plan-price">$59.99/year</p>
-          </div>
-          <a href="#" class="card__plan-btn">
-            Change
-          </a>
+    <section class="order-component-section">
+        <div class="card container">
+            <figure class="card__image-container">
+                <img src="images/illustration-hero.svg" class="card__image" alt="Person with headphone">
+            </figure>
+
+            <div class="card__text-content">
+                <h1 class="card__heading">Order Summary</h1>
+                <p class="card__text">
+                    You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
+                </p>
+                <div class="card__plan flex flex-align-center flex-gap">
+                    <img src="images/icon-music.svg" class="card__plan-image" alt="music icon">
+                    <div class="card__plan-text">
+                        <h2 class="card__plan-heading">Annual Plan</h2>
+                        <p class="card__plan-price">$59.99/year</p>
+                    </div>
+                    <a href="#" class="card__plan-btn">
+                        Change
+                    </a>
+                </div>
+                <button class="card__payment-btn">Proceed to Payment</button>
+                <button class="card__cancel-btn">Cancel Order</button>
+            </div>
         </div>
-        <button class="card__payment-btn">Proceed to Payment</button>
-        <button class="card__cancel-btn">Cancel Order</button>
-
-      </div>
-
-
-    </div>
-  </section>
+    </section>
 </main>
-<!--  Order Summary-->
-
-
-
-<!--  Annual Plan-->
-<!--  $59.99/year-->
-
-<!--  Change-->
-
-<!--  -->
-<!--  -->
-
 </body>
 </html>
