--- a/18_order-summary-component/index.html
+++ b/18_order-summary-component/index.html
@@ -21,11 +21,14 @@
                 <img src="images/illustration-hero.svg" class="card__image" alt="Person with headphone">
             </figure>
 
-            <div class="card__text-content">
-                <h1 class="card__heading">Order Summary</h1>
-                <p class="card__text">
-                    You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
-                </p>
+            <div class="card__content">
+                <div class="card__text-content">
+                    <h1 class="card__heading">Order Summary</h1>
+                    <p class="card__text">
+                        You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you
+                        like!
+                    </p>
+                </div>
                 <div class="card__plan flex flex-align-center flex-gap">
                     <img src="images/icon-music.svg" class="card__plan-image" alt="music icon">
                     <div class="card__plan-text">
