--- a/18_order-summary-component/index.html
+++ b/18_order-summary-component/index.html
@@ -17,9 +17,9 @@
 <main>
     <section class="order-component-section">
         <div class="card container">
-            <figure class="card__image-container">
-                <img src="images/illustration-hero.svg" class="card__image" alt="Person with headphone">
-            </figure>
+            <div class="card__image-container">
+                <img src="images/illustration-hero.svg" class="card__image" alt="">
+            </div>
 
             <div class="card__content">
                 <div class="card__text-content">
@@ -30,7 +30,7 @@
                     </p>
                 </div>
                 <div class="card__plan flex flex-align-center flex-gap">
-                    <img src="images/icon-music.svg" class="card__plan-image" alt="music icon">
+                    <img src="images/icon-music.svg" class="card__plan-image" alt="">
                     <div class="card__plan-text">
                         <h2 class="card__plan-heading">Annual Plan</h2>
                         <p class="card__plan-price">$59.99/year</p>
