Some error fixing

--- a/18_order-summary-component/index.html
+++ b/18_order-summary-component/index.html
@@ -39,8 +39,8 @@
                         Change
                     </a>
                 </div>
-                <button class="card__payment-btn">Proceed to Payment</button>
-                <button class="card__cancel-btn">Cancel Order</button>
+                <button class="card__payment-btn" type="button">Proceed to Payment</button>
+                <button class="card__cancel-btn" type="button">Cancel Order</button>
             </div>
         </div>
     </section>
