--- a/01-qr_code_component/index.html
+++ b/01-qr_code_component/index.html
@@ -20,10 +20,10 @@
 
 <main>
     <div class="container">
-        <img src="images/image-qr-code.png" alt="QR Image" class="image">
-        <div class="text-content">
-            <h3 class="heading">Improve your front-end skills by building projects</h3>
-            <p class="para">Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <img src="images/image-qr-code.png" alt="QR Image" class="container__image">
+        <div class="container__text-content">
+            <h3 class="container__heading">Improve your front-end skills by building projects</h3>
+            <p class="container__text">Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
 </main>
