--- a/01-qr_code_component/index.html
+++ b/01-qr_code_component/index.html
@@ -8,6 +8,9 @@
     <title>QR Code Component (Frontend Mentor)</title>
     <link rel="icon" type=" image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
@@ -19,11 +22,11 @@
 </div>
 
 <main>
-    <div class="container">
-        <img src="images/image-qr-code.png" alt="QR Image" class="container__image">
-        <div class="container__text-content">
-            <h3 class="container__heading">Improve your front-end skills by building projects</h3>
-            <p class="container__text">Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <div class="card">
+        <img src="images/image-qr-code.png" alt="QR Image" class="card__image">
+        <div class="card__text-content">
+            <h3 class="card__heading">Improve your front-end skills by building projects</h3>
+            <p class="card__text">Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
 </main>
