--- a/01-qr_code_component/index.html
+++ b/01-qr_code_component/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-<div class="icons">
-    <ion-icon class="light-mode-icon" name="sunny-outline"></ion-icon>
-    <ion-icon class="dark-mode-icon" name="moon-outline"></ion-icon>
+<div class="icon">
+    <ion-icon class="icon__light-mode" name="sunny-outline"></ion-icon>
+    <ion-icon class="icon__dark-mode" name="moon-outline"></ion-icon>
 </div>
 
 <main>
