--- a/15-designo_multi_page_website/pages/app-design.html
+++ b/15-designo_multi_page_website/pages/app-design.html
@@ -4,28 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
-<body class="home">
-
+<body>
 <header class="header-section">
     <div class="header container flex flex-justify-space-between flex-align-center">
-        <a href="index.html" class="header__logo-wrapper">
+        <a href="../index.html" class="header__logo-wrapper">
             <img src="/images/shared/desktop/logo-dark.png" class="header__logo" alt="Designo logo">
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list flex">
-                <li><a href="pages/about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
-                <li><a href="pages/locations.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
-                <li><a href="pages/contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
+                <li><a href="about.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
+                <li><a href="locations.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="contact.html" class="header__nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
             </ul>
         </nav>
         <div class="header__mobile-nav">
@@ -37,21 +36,85 @@
 
 <main>
     <section class="hero-section">
-        <div class="hero grid grid--2-columns background-peach">
-            <div class="hero__description hero-flow">
-                <h1 class="hero__heading primary-heading text-color-white">
-                    Award-winning custom designs and digital branding solutions
-                </h1>
-                <p class="hero__text font-size-100 text-color-white">
-                    With over 10 years in the industry, we are experienced in creating fully responsive websites, app
-                    design, and engaging brand experiences. Find out more about our services.
-                </p>
-                <a href="pages/about.html" class="btn btn--light hero__btn text-decoration-none font-size-100 text-color-black background-white uppercase">
-                    Learn more
-                </a>
+        <div class="container hero-design grid grid-place-center background-peach text-align-center">
+            <div class="hero-design__text-content flow">
+                <h1 class="primary-heading text-color-white">App design</h1>
+                <p class="font-size-100 text-color-white">Our mobile designs bring intuitive digital solutions to your
+                    customers right at their fingertips.</p>
             </div>
-            <div class="hero__image-wrapper">
-                <img src="images/home/desktop/image-hero-phone.png" class="hero__image" alt="hero-image">
+        </div>
+    </section>
+
+    <section class="projects-section section-padding">
+        <div class="container grid grid--3-columns">
+            <div class="card background-very-light-peach">
+                <div class="card__image-wrapper">
+                    <img src="/images/app-design/desktop/image-airfilter.jpg" class="card__image" alt="Airfilter app">
+                </div>
+                <div class="card__text-content text-align-center flow">
+                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                        Airfilter
+                    </h3>
+                    <p class="card__text text-color-dark-grey font-size-100">
+                        Solving the problem of poor indoor air quality by filtering the air
+                    </p>
+                </div>
+            </div>
+
+            <div class="card background-very-light-peach">
+                <div class="card__image-wrapper">
+                    <img src="/images/app-design/desktop/image-eyecam.jpg" class="card__image" alt="Eyecam App">
+                </div>
+                <div class="card__text-content text-align-center flow">
+                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                        Eyecam
+                    </h3>
+                    <p class="card__text text-color-dark-grey font-size-100">
+                        Product that lets you edit your favorite photos and videos at any time
+                    </p>
+                </div>
+            </div>
+
+            <div class="card background-very-light-peach">
+                <div class="card__image-wrapper">
+                    <img src="/images/app-design/desktop/image-faceit.jpg" class="card__image" alt="Faceit App">
+                </div>
+                <div class="card__text-content text-align-center flow">
+                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                        Faceit
+                    </h3>
+                    <p class="card__text text-color-dark-grey font-size-100">
+                        Get to meet your favorite internet superstar with the faceit app
+                    </p>
+                </div>
+            </div>
+
+            <div class="card background-very-light-peach">
+                <div class="card__image-wrapper">
+                    <img src="/images/app-design/desktop/image-todo.jpg" class="card__image" alt="Todo App">
+                </div>
+                <div class="card__text-content text-align-center flow">
+                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                        Todo
+                    </h3>
+                    <p class="card__text text-color-dark-grey font-size-100">
+                        A todo app that features cloud sync with light and dark mode
+                    </p>
+                </div>
+            </div>
+
+            <div class="card background-very-light-peach">
+                <div class="card__image-wrapper">
+                    <img src="/images/app-design/desktop/image-loopstudios.jpg" class="card__image" alt="Loopstudios App">
+                </div>
+                <div class="card__text-content text-align-center flow">
+                    <h3 class="card__heading tertiary-heading uppercase letter-spacing-2 text-color-peach">
+                        Loopstudios
+                    </h3>
+                    <p class="card__text text-color-dark-grey font-size-100">
+                        A VR experience app made for Loopstudios
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -66,14 +129,6 @@
                     View Projects <span class="service__link-symbol">&#62;</span>
                 </a>
             </div>
-            <div class="service service--app-design flex flex-justify-center flex-align-center flex-column flex-gap">
-                <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
-                    App Design
-                </h2>
-                <a class="service__link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
-                    View Projects <span class="service__link-symbol">&#62;</span>
-                </a>
-            </div>
             <div class="service service--graphic-design flex flex-justify-center flex-align-center flex-column flex-gap">
                 <h2 class="service__heading secondary-heading text-color-white uppercase letter-spacing-1">
                     Graphic Design
@@ -81,55 +136,6 @@
                 <a class="service__link font-size-100 text-color-white uppercase text-decoration-none letter-spacing-2">
                     View Projects <span class="service__link-symbol">&#62;</span>
                 </a>
-            </div>
-        </div>
-    </section>
-
-    <section class="features-section section-padding">
-        <div class="container grid grid--3-columns">
-            <div class="feature grid">
-                <div class="feature__image-wrapper">
-                    <img src="images/home/desktop/illustration-passionate.svg" class="feature__image" alt="Designo advantage">
-                </div>
-                <div class="feature__text-content flow text-align-center">
-                    <h3 class="feature__heading tertiary-heading font-size-200 uppercase letter-spacing-2">
-                        Passionate
-                    </h3>
-                    <p class="feature__text">
-                        Each project starts with an in-depth brand research to ensure we only create products that serve
-                        a
-                        purpose. We merge art, design, and technology into exciting new solutions
-                    </p>
-                </div>
-            </div>
-            <div class="feature grid">
-                <div class="feature__image-wrapper">
-                    <img src="images/home/desktop/illustration-resourceful.svg" class="feature__image" alt="Designo advantage">
-                </div>
-                <div class="feature__text-content flow text-align-center">
-                    <h3 class="feature__heading tertiary-heading font-size-200 uppercase letter-spacing-2">
-                        Resourceful
-                    </h3>
-                    <p class="feature__text">
-                        Everything that we do has a strategic purpose. We use an agile approach in all of our projects
-                        and value customer collaboration. It guarantees superior results that fulfill our clients’
-                        needs.
-                    </p>
-                </div>
-            </div>
-            <div class="feature grid">
-                <div class="feature__image-wrapper">
-                    <img src="images/home/desktop/illustration-friendly.svg" class="feature__image" alt="Designo advantage">
-                </div>
-                <div class="feature__text-content flow text-align-center">
-                    <h3 class="feature__heading tertiary-heading font-size-200 uppercase letter-spacing-2">
-                        Friendly
-                    </h3>
-                    <p class="feature__text font-size-100">
-                        We are a group of enthusiastic folks who know how to put people first. Our success depends on
-                        our customers, and we strive to give them the best experience a company can provide.
-                    </p>
-                </div>
             </div>
         </div>
     </section>
@@ -148,7 +154,7 @@
                 </p>
             </div>
             <div class="footer-contact__button-wrapper grid">
-                <a href="pages/contact.html" class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
+                <a href="contact.html" class="footer-contact__btn btn btn--light text-color-dark-grey text-decoration-none uppercase">
                     Get in Touch
                 </a>
             </div>
@@ -157,17 +163,17 @@
 
     <div class="container footer">
         <div class="footer__logo-wrapper">
-            <a class="footer__logo-link flex flex-align-center flex-justify-center" href="#">
+            <a class="footer__logo-link flex flex-align-center flex-justify-center" href="../index.html">
                 <img src="/images/shared/desktop/logo-light.png" class="footer__logo" alt="Logo light">
             </a>
         </div>
         <nav class="footer__nav">
             <ul class="footer__nav-list list-style-none flex flex-column flex-gap">
-                <li><a href="pages/about.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
+                <li><a href="about.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
-                <li><a href="pages/locations.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                <li><a href="locations.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Locations</a>
                 </li>
-                <li><a href="pages/contact.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                <li><a href="contact.html" class="footer__nav-link text-color-white text-decoration-none uppercase letter-spacing-1">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -194,7 +200,6 @@
 </footer>
 
 <div class="overlay hidden"></div>
-<script src="javascript/script.js"></script>
+<script src="../javascript/script.js"></script>
 </body>
 </html>
-
