--- a/03-testimonial_grid_section/index.html
+++ b/03-testimonial_grid_section/index.html
@@ -5,42 +5,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/queries.css">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-  <title>Frontend Mentor | Testimonial Grid Section</title>
+  <title>Testimonial Grid Section</title>
 
 
 </head>
 
-<body class="dark-mode">
+<body class="dark-mode--active">
   <header>
-    <div class="icons">
-      <ion-icon class="light-mode-icon" name="sunny-outline"></ion-icon>
-      <ion-icon class="dark-mode-icon" name="moon-outline"></ion-icon>
+    <div class="icon">
+      <ion-icon class="icon__light-mode" name="sunny-outline"></ion-icon>
+      <ion-icon class="icon__dark-mode" name="moon-outline"></ion-icon>
     </div>
   </header>
 
   <main>
-    <section class="testimonial-grid">
-
-      <article class="testimonial Daniel-Clifford">
-        <div class="person-information">
-          <div class="person-image">
+    <section class="testimonials-section">
+      <article class="testimonial testimonial--daniel">
+        <div class="testimonial__person-info">
+          <div class="testimonial__person-image">
             <img src="images/image-daniel.jpg" alt="Daniel Clifford">
           </div>
           <div>
-            <p class="name">Daniel Clifford</p>
-            <p class="position">Verified Graduate</p>
+            <p class="testimonial__person-name">Daniel Clifford</p>
+            <p class="testimonial__person-pos">Verified Graduate</p>
           </div>
         </div>
-        <h3 class="testimonial-heading">
+        <h3 class="testimonial__title">
           I received a job offer mid-course, and the subjects I learned were current, if not more so,
           in the company I joined. I honestly feel I got every penny’s worth.
         </h3>
-        <p class="testimonial-paragraph">
+        <p class="testimonial__text">
           “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
           transition and have heard some people who had an amazing experience here. I signed up
           for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
@@ -49,59 +50,59 @@
         </p>
       </article>
 
-      <article class="testimonial Jonathan-Walters">
-        <div class="person-information">
+      <article class="testimonial testimonial--jonathan">
+        <div class="testimonial__person-info">
           <div class="person-image">
             <img src="images/image-jonathan.jpg" alt="Jonathan Walters">
           </div>
           <div>
-            <p class="name">Jonathan Walters</p>
-            <p class="position">Verified Graduate</p>
+            <p class="testimonial__person-name">Jonathan Walters</p>
+            <p class="testimonial__person-pos">Verified Graduate</p>
           </div>
         </div>
-        <h3 class="testimonial-heading">
+        <h3 class="testimonial__title">
           The team was very supportive and kept me motivated
         </h3>
-        <p class="testimonial-paragraph">
+        <p class="testimonial__text">
           “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
           for a big company. This was one of the best investments I’ve made in myself. ”
         </p>
       </article>
 
-      <article class="testimonial Jeanette-Harmon">
-        <div class="person-information">
+      <article class="testimonial testimonial--jeanette">
+        <div class="testimonial__person-info">
           <div class="person-image">
             <img src="images/image-jeanette.jpg" alt="Jeanette Harmon">
           </div>
           <div>
-            <p class="name">Jeanette Harmon</p>
-            <p class="position">Verified Graduate</p>
+            <p class="testimonial__person-name">Jeanette Harmon</p>
+            <p class="testimonial__person-pos testimonial__person-pos--jeanette">Verified Graduate</p>
           </div>
         </div>
-        <h3 class="testimonial-heading">
+        <h3 class="testimonial__title">
           An overall wonderful and rewarding experience
         </h3>
-        <p class="testimonial-paragraph">
+        <p class="testimonial__text testimonial__text--jeanette">
           “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
           while doing something I love. ”
         </p>
       </article>
 
-      <article class="testimonial Patrick-Abrams">
-        <div class="person-information">
+      <article class="testimonial testimonial--patrick">
+        <div class="testimonial__person-info">
           <div class="person-image">
             <img src="images/image-patrick.jpg" alt="Patrick Abrams">
           </div>
           <div>
-            <p class="name">Patrick Abrams</p>
-            <p class="position">Verified Graduate</p>
+            <p class="testimonial__person-name">Patrick Abrams</p>
+            <p class="testimonial__person-pos">Verified Graduate</p>
           </div>
         </div>
-        <h3 class="testimonial-heading">
+        <h3 class="testimonial__title">
           Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
           learning from their experiences was easy.
         </h3>
-        <p class="testimonial-paragraph">
+        <p class="testimonial__text">
           “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
           gave me the confidence necessary to be able to go out in the world and present myself as a capable
           junior developer. The standard is above the rest. You will get the personal attention you need from
@@ -109,20 +110,20 @@
         </p>
       </article>
 
-      <article class="testimonial Kira-Whittle">
-        <div class="person-information">
+      <article class="testimonial testimonial--kira">
+        <div class="testimonial__person-info">
           <div class="person-image">
             <img src="images/image-kira.jpg" alt="Kira Whittle">
           </div>
           <div>
-            <p class="name">Kira Whittle</p>
-            <p class="position">Verified Graduate</p>
+            <p class="testimonial__person-name">Kira Whittle</p>
+            <p class="testimonial__person-pos testimonial__person-pos--kira">Verified Graduate</p>
           </div>
         </div>
-        <h3 class="testimonial-heading">
+        <h3 class="testimonial__title">
           Such a life-changing experience. Highly recommended!
         </h3>
-        <p class="testimonial-paragraph">
+        <p class="testimonial__text testimonial__text--kira">
           “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
           professionals who can help me learn programming step by step. I was encouraged to enroll by a former
           student of theirs who can only say wonderful things about the program. The entire curriculum and staff
@@ -133,7 +134,6 @@
           100% recommend! ”
         </p>
       </article>
-
     </section>
   </main>
 
