--- a/03-testimonial_grid_section/index.html
+++ b/03-testimonial_grid_section/index.html
@@ -30,7 +30,7 @@
       <article class="testimonial testimonial--daniel">
         <div class="testimonial__person-info">
           <div class="testimonial__person-image">
-            <img src="images/image-daniel.jpg" alt="Daniel Clifford">
+            <img src="images/image-daniel.jpg" class="testimonial__person-image" alt="Daniel Clifford">
           </div>
           <div>
             <p class="testimonial__person-name">Daniel Clifford</p>
@@ -53,7 +53,7 @@
       <article class="testimonial testimonial--jonathan">
         <div class="testimonial__person-info">
           <div class="person-image">
-            <img src="images/image-jonathan.jpg" alt="Jonathan Walters">
+            <img src="images/image-jonathan.jpg" class="testimonial__person-image" alt="Jonathan Walters">
           </div>
           <div>
             <p class="testimonial__person-name">Jonathan Walters</p>
@@ -72,7 +72,7 @@
       <article class="testimonial testimonial--jeanette">
         <div class="testimonial__person-info">
           <div class="person-image">
-            <img src="images/image-jeanette.jpg" alt="Jeanette Harmon">
+            <img src="images/image-jeanette.jpg" class="testimonial__person-image" alt="Jeanette Harmon">
           </div>
           <div>
             <p class="testimonial__person-name">Jeanette Harmon</p>
@@ -91,7 +91,7 @@
       <article class="testimonial testimonial--patrick">
         <div class="testimonial__person-info">
           <div class="person-image">
-            <img src="images/image-patrick.jpg" alt="Patrick Abrams">
+            <img src="images/image-patrick.jpg" class="testimonial__person-image" alt="Patrick Abrams">
           </div>
           <div>
             <p class="testimonial__person-name">Patrick Abrams</p>
@@ -113,7 +113,7 @@
       <article class="testimonial testimonial--kira">
         <div class="testimonial__person-info">
           <div class="person-image">
-            <img src="images/image-kira.jpg" alt="Kira Whittle">
+            <img src="images/image-kira.jpg" class="testimonial__person-image" alt="Kira Whittle">
           </div>
           <div>
             <p class="testimonial__person-name">Kira Whittle</p>
