--- a/04-nft_preview_card_component/index.html
+++ b/04-nft_preview_card_component/index.html
@@ -6,33 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | NFT preview card component</title>
+  <title>NFT Preview card component</title>
 </head>
 
 <body>
 
   <main>
-    <section class="NFT-Preview-Card">
-      <div class="image-container">
-        <img src="images/image-equilibrium.jpg" alt="Equilibrium image">
-        <div class="image-overlay">
-          <img src="images/icon-view.svg" alt="icon">
+    <section class="card-section">
+      <div class="card__image-wrapper">
+        <img src="images/image-equilibrium.jpg" class="card__image" alt="Equilibrium image">
+        <div class="card__overlay">
+          <img class="card__overlay-image" src="images/icon-view.svg" alt="overlay image">
         </div>
       </div>
-      <div class="text-content">
-        <h2 class="heading">Equilibrium #3429</h2>
-        <p class="paragraph">
+      <div class="card__text-content">
+        <h2 class="card__title">Equilibrium #3429</h2>
+        <p class="card__description">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <div class="crypto-information">
-          <p class="ethereum"><img src="images/icon-ethereum.svg" alt=""> 0.041 ETH</p>
-          <p class="days-left"><img src="images/icon-clock.svg" alt=""> 3 days left</p>
+        <div class="card__crypto-info">
+          <p class="card__ethereum"><img src="images/icon-ethereum.svg" alt=""> 0.041 ETH</p>
+          <p class="card__days-left"><img src="images/icon-clock.svg" alt=""> 3 days left</p>
         </div>
-        <div class="author-information">
-          <div class="author-image">
-            <img src="images/image-avatar.png" alt="">
+        <div class="card__author-info">
+          <div class="card__author-image-wrapper">
+            <img class="card__author-image" src="images/image-avatar.png"  alt="author image">
           </div>
-          <p class="created-by">Creation of <span class="author-name">Jules Wyvern</span></p>
+          <p class="card__creator">Creation of <span class="card__author-name">Jules Wyvern</span></p>
         </div>
       </div>
     </section>
