--- a/05-easy_bank_landing_page/index.html
+++ b/05-easy_bank_landing_page/index.html
@@ -62,7 +62,7 @@
 
     <section class="section-intro">
       <div class="container">
-        <div class="intro-text-content margin-bottom-verybig">
+        <div class="intro-text-content">
           <h2 class="heading-secondary">
             Why choose Easybank?
           </h2>
