--- a/02-product_preview_component/index.html
+++ b/02-product_preview_component/index.html
@@ -19,8 +19,8 @@
     <section class="card-section">
       <div class="card grid">
         <picture class="card__picture">
-          <source media="(max-width: 628px)" srcset="images/image-product-mobile.jpg">
-          <img src="images/image-product-desktop.jpg" class="card__image" alt="Product" style="width:auto;">
+          <source media="(max-width: 39.25em)" srcset="images/image-product-mobile.jpg">
+          <img src="images/image-product-desktop.jpg" class="card__image" alt="Product">
         </picture>
         <div class="card__body">
           <h6 class="card__sub-title">Perfume</h6>
