--- a/05-easy_bank_landing_page/index.html
+++ b/05-easy_bank_landing_page/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/general.css">
   <link rel="stylesheet" href="css/queries.css">
 
   <title>Easybank | Next Gen Banking</title>
@@ -17,73 +19,72 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header-container">
-      <img src="images/logo.svg" alt="logo" class="logo">
+  <header class="header-section">
+    <div class="header container">
+      <img class="footer__logo-wrapper" src="images/logo.svg" alt="logo">
 
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">Home</a></li>
-          <li><a class="main-nav-link" href="#">About</a></li>
-          <li><a class="main-nav-link" href="#">Contact</a></li>
-          <li><a class="main-nav-link" href="#">Blog</a></li>
-          <li><a class="main-nav-link" href="#">Careers</a></li>
+      <nav class="header__nav">
+        <ul class="header__nav-list">
+          <li><a class="header__nav-link" href="#">Home</a></li>
+          <li><a class="header__nav-link" href="#">About</a></li>
+          <li><a class="header__nav-link" href="#">Contact</a></li>
+          <li><a class="header__nav-link" href="#">Blog</a></li>
+          <li><a class="header__nav-link" href="#">Careers</a></li>
         </ul>
       </nav>
-      <button class="dropdown-toggle">
-        <img src="images/icon-hamburger.svg" class="open-nav" alt="Open menu">
-        <img src="images/icon-close.svg" class="close-nav" alt="Close menu">
+      <button class="header__mobile-nav">
+        <img class="header__open-nav-btn" src="images/icon-hamburger.svg" alt="Open menu">
+        <img class="header__close-nav-btn" src="images/icon-close.svg" alt="Close menu">
       </button>
-      <a class="main-cta header-cta" href="#">Request Invite</a>
+      <a class="header__cta main-cta" href="#">Request Invite</a>
     </div>
   </header>
 
   <div class="overlay hidden"></div>
 
   <main>
-    <section class="section-hero">
-      <div class="hero grid grid--2-cols">
-        <div class="hero-text-box">
-          <h1 class="heading-primary">
+    <section class="hero-section">
+      <div class="hero container grid grid--2-cols">
+        <div class="hero__text-content">
+          <h1 class="hero__heading heading-primary">
             Next generation digital banking
           </h1>
-          <p class="hero-text">
+          <p class="hero__text">
             Take your financial life online. Your Easybank account will be a one-stop-shop
             for spending, saving, budgeting, investing, and much more.
           </p>
-          <a class="main-cta hero-cta" href="#">Request Invite</a>
+          <a class="hero__cta main-cta" href="#">Request Invite</a>
         </div> 
 
-        <div class="hero-image">
-          <img src="images/image-mockups.png" alt="Phone Image">
+        <div class="hero__image-wrapper">
+          <img src="images/image-mockups.png" alt="Phone Image" class="hero__image">
         </div>
       </div>
     </section>
 
-    <section class="section-intro">
-      <div class="container">
+    <section class="intro-section">
+      <div class="intro container">
         <div class="intro-text-content">
-          <h2 class="heading-secondary">
+          <h2 class="intro__heading heading-secondary">
             Why choose Easybank?
           </h2>
-          <p class="intro-paragraph">
+          <p class="intro__text">
             We leverage Open Banking to turn your bank account into your financial hub.
           </p>
-          <p class="intro-paragraph">
+          <p class="intro__text">
             Control your finances like never before.
           </p>
         </div>
 
         <div class="features grid grid--4-cols">
-
           <div class="feature">
-            <div class="feature-icon">
-              <img src="images/icon-online.svg" alt="feature icon">
+            <div class="feature__icon-wrapper">
+              <img src="images/icon-online.svg" alt="feature icon" class="feature__icon">
             </div>
-            <h3 class="heading-tertiary">
+            <h3 class="feature__heading heading-tertiary">
               Online Banking
             </h3>
-            <p class="feature-description">
+            <p class="feature__description">
               Our modern web and mobile applications allow you to keep track of your finances wherever you are in the
               world.
             </p>
@@ -96,7 +97,7 @@
             <h3 class="heading-tertiary">
               Simple Budgeting
             </h3>
-            <p class="feature-description">
+            <p class="feature__description">
               See exactly where your money goes each month. Receive notifications when you’re close to hitting your
               limits.
             </p>
@@ -109,7 +110,7 @@
             <h3 class="heading-tertiary">
               Fast Onboarding
             </h3>
-            <p class="feature-description">
+            <p class="feature__description">
               We don’t do branches. Open your account in minutes online and start taking control of your finances right
               away.
             </p>
@@ -122,7 +123,7 @@
             <h3 class="heading-tertiary">
               Open API
             </h3>
-            <p class="feature-description">
+            <p class="feature__description">
               Manage your savings, investments, pension, and much more from one account. Tracking your money has never
               been easier.
             </p>
@@ -131,78 +132,78 @@
       </div>
     </section>
 
-    <section class="section-article">
-      <div class="container">
-        <h2 class="heading-secondary">
+    <section class="articles-section">
+      <div class="articles container">
+        <h2 class="articles__title heading-secondary">
           Latest articles
         </h2>
-        <div class="article-grid grid grid--4-cols">
-          <article class="article">
-            <div class="article-image">
-              <img src="images/image-currency (1).jpg" alt="Currency image">
+        <div class="articles__content grid grid--4-cols">
+          <article class="articles__card">
+            <div class="articles__card-image-wrapper">
+              <img class="articles__card-image" src="images/image-currency (1).jpg" alt="Currency image">
             </div>
-            <div class="article-content">
-              <span class="author">
+            <div class="articles__card-description">
+              <span class="articles__card-author">
                 By Claire Robinson
               </span>
-              <h3 class="article-heading">
+              <h3 class="articles__card-title">
                 Receive money in any currency with no fees
               </h3>
-              <p class="article-text">
+              <p class="articles__card-text">
                 The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive
                 money in a single …
               </p>
             </div>
           </article>
 
-          <article class="article">
-            <div class="article-image">
-              <img src="images/image-restaurant.jpg" alt="Confetti image">
+          <article class="articles__card">
+            <div class="articles__card-image-wrapper">
+              <img class="articles__card-image" src="images/image-restaurant.jpg" alt="Confetti image">
             </div>
-            <div class="article-content">
-              <span class="author">
+            <div class="articles__card-description">
+              <span class="articles__card-author">
                 By Wilson Hutton
               </span>
-              <h3 class="article-heading">
+              <h3 class="articles__card-title">
                 Treat yourself without worrying about money
               </h3>
-              <p class="article-text">
+              <p class="articles__card-text">
                 Our simple budgeting feature allows you to separate out your spending and set realistic limits each
                 month. That means you …
               </p>
             </div>
           </article>
 
-          <article class="article">
-            <div class="article-image">
-              <img src="images/image-plane.jpg" alt="Plane image">
+          <article class="articles__card">
+            <div class="articles__card-image-wrapper">
+              <img class="articles__card-image" src="images/image-plane.jpg" alt="Plane image">
             </div>
-            <div class="article-content">
-              <span class="author">
+            <div class="articles__card-description">
+              <span class="articles__card-author">
                 By Wilson Hutton
               </span>
-              <h3 class="article-heading">
+              <h3 class="articles__card-title">
                 Take your Easybank card wherever you go
               </h3>
-              <p class="article-text">
+              <p class="articles__card-text">
                 We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re
                 abroad. We’ll even show you …
               </p>
             </div>
           </article>
 
-          <article class="article">
-            <div class="article-image">
-              <img src="images/image-confetti.jpg" alt="Confetti image">
+          <article class="articles__card">
+            <div class="articles__card-image-wrapper">
+              <img class="articles__card-image" src="images/image-confetti.jpg" alt="Confetti image">
             </div>
-            <div class="article-content">
-              <span class="author">
+            <div class="articles__card-description">
+              <span class="articles__card-author">
                 By Claire Robinson
               </span>
-              <h3 class="article-heading">
+              <h3 class="articles__card-title">
                 Our invite-only Beta accounts are now live!
               </h3>
-              <p class="article-text">
+              <p class="articles__card-text">
                 After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to
                 request an invite through site ...
               </p>
@@ -213,37 +214,37 @@
     </section>
   </main>
 
-  <footer class="footer">
-    <div class="footer-container container grid grid--4-cols">
-      <div class="logos">
-        <a href="#" class="logo">
-          <img src="images/footer-logo.svg" alt="Easybank logo">
+  <footer class="footer-section">
+    <div class="footer container grid grid--4-cols">
+      <div class="footer__logos-wrapper">
+        <a href="#" class="footer__logo-wrapper">
+          <img class="footer__logo" src="images/footer-logo.svg" alt="Easybank logo">
         </a>
-        <div class="social-logos">
-          <a href="#"><ion-icon name="logo-facebook" class="social-logo" alt="Youtube logo"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-youtube" class="social-logo" alt="Twitter logo"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-twitter" class="social-logo" alt="Twitter logo"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-pinterest" class="social-logo" alt="Pinterest logo"></ion-icon></a>
-          <a href="#"><ion-icon name="logo-instagram" class="social-logo" alt="Instagram logo"></ion-icon></a>
+        <div class="footer__social-logos">
+          <a href="#"><ion-icon name="logo-facebook" class="footer__social-logo" alt="Youtube logo"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-youtube" class="footer__social-logo" alt="Twitter logo"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-twitter" class="footer__social-logo" alt="Twitter logo"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-pinterest" class="footer__social-logo" alt="Pinterest logo"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-instagram" class="footer__social-logo" alt="Instagram logo"></ion-icon></a>
         </div>
       </div>
-      <nav class="footer-navigation">
-        <ul class="footer-nav-list">
-          <li><a href="#" class="footer-nav-links">About Us</a></li>
-          <li><a href="#" class="footer-nav-links">Contact Us</a></li>
-          <li><a href="#" class="footer-nav-links">Blog</a></li>
+      <nav class="footer__nav">
+        <ul class="footer__nav-list">
+          <li><a href="#" class="footer__nav-link">About Us</a></li>
+          <li><a href="#" class="footer__nav-link">Contact Us</a></li>
+          <li><a href="#" class="footer__nav-link">Blog</a></li>
         </ul>
       </nav>
       <nav class="footer-navigation">
-        <ul class="footer-nav-list">
-          <li><a href="#" class="footer-nav-links">Careers</a></li>
-          <li><a href="#" class="footer-nav-links">Support</a></li>
-          <li><a href="#" class="footer-nav-links">Privacy Policy</a></li>
+        <ul class="footer__nav-list">
+          <li><a href="#" class="footer__nav-link">Careers</a></li>
+          <li><a href="#" class="footer__nav-link">Support</a></li>
+          <li><a href="#" class="footer__nav-link">Privacy Policy</a></li>
         </ul>
       </nav>
-      <div class="additional-info">
-        <a href="#" class="footer-cta main-cta">Request Invite</a>
-        <p class="copyright"> © Easybank. All Rights Reserved</p>
+      <div class="footer__additional-info">
+        <a href="#" class="footer__cta main-cta">Request Invite</a>
+        <p class="footer__copyright-text"> © Easybank. All Rights Reserved</p>
       </div>
     </div>
   </footer>
