--- a/18_order-summary-component/index.html
+++ b/18_order-summary-component/index.html
@@ -15,13 +15,13 @@
 <body>
 
 <main>
-    <section class="order-component-section">
+    <section class="card-section">
         <div class="card container">
             <div class="card__image-container">
                 <img src="images/illustration-hero.svg" class="card__image" alt="">
             </div>
 
-            <div class="card__content">
+            <div class="card__description">
                 <div class="card__text-content">
                     <h1 class="card__heading">Order Summary</h1>
                     <p class="card__text">
